@@ -1,3 +1,7 @@
+2025-01-06  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el (consult-browser-hist): Enhance browser-hist with consult.
+
 2025-01-05  Zhengyi Fu  <i@fuzy.me>
 
 	* site-lisp/exde.el: Enable display time mode.
